--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "ansi-styles": "github:chalk/ansi-styles",
     "aurelia-logging": "^1.2.0",
     "aurelia-logging-console": "^1.0.0",
     "aurelia-polyfills": "^1.1.1",
