--- a/package.json
+++ b/package.json
@@ -63,7 +63,6 @@
     "rimraf": "^2.5.4",
     "tslint": "^4.3.1",
     "tslint-config-unional": "^0.6.0",
-    "typescript": "^2.1.4",
-    "typings": "^2.1.0"
+    "typescript": "^2.1.4"
   }
 }
