--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "aurelia-polyfills": "^1.1.1",
     "ava": "^0.17.0",
     "browser-env": "^2.0.19",
+    "colormap": "^2.2.0",
     "core-js": "^2.4.1",
     "dependency-check": "^2.7.0",
     "eslint": "^3.13.0",
