--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "dist"
   ],
   "scripts": {
-    "build": "npm run clean && npm run build-commonjs",
+    "build": "npm run clean && npm run build-commonjs && npm run build-global",
     "build-commonjs": "tsc -p tsconfig.commonjs.json",
+    "build-global": "rollup --config rollup.config.global.js",
     "clean": "rimraf dist",
-    "coverage": "npm test && nyc check-coverage --branches 85 --functions 85 --lines 85",
+    "coverage": "nyc --check-coverage --branches 85 --functions 85 --lines 85 npm test",
     "coveralls": "nyc report --reporter=text-lcov | coveralls",
     "dependency-check": "dependency-check . --unused --no-dev && dependency-check . --missing --no-dev",
     "lint": "tslint \"src/**/*.ts\"",
@@ -51,6 +52,7 @@
   "devDependencies": {
     "ansi-styles": "github:chalk/ansi-styles",
     "aurelia-logging": "^1.2.0",
+    "aurelia-logging-color": "^0.4.5",
     "aurelia-logging-console": "^1.0.0",
     "aurelia-polyfills": "^1.1.1",
     "ava": "^0.17.0",
@@ -58,15 +60,24 @@
     "colormap": "^2.2.0",
     "core-js": "^2.4.1",
     "dependency-check": "^2.7.0",
-    "eslint": "^3.13.0",
+    "eslint": "^3.13.1",
     "eslint-config-unional": "^0.2.3",
     "nyc": "^10.0.0",
+    "param-case": "^2.1.0",
+    "pascal-case": "^2.0.0",
     "rimraf": "^2.5.4",
+    "rollup": "^0.41.1",
+    "rollup-plugin-commonjs": "^7.0.0",
+    "rollup-plugin-node-builtins": "^2.0.0",
+    "rollup-plugin-node-globals": "^1.1.0",
+    "rollup-plugin-node-resolve": "^2.0.0",
+    "rollup-plugin-sourcemaps": "^0.4.1",
+    "rollup-plugin-uglify": "^1.0.1",
     "tslint": "^4.3.1",
     "tslint-config-unional": "^0.6.0",
-    "typescript": "^2.1.4"
+    "typescript": "^2.1.5"
   },
   "dependencies": {
-    "color-map": "^0.4.0"
+    "color-map": "^0.5.4"
   }
 }
