--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
     "declaration": true,
-    "inlineSources": false,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "inlineSources": true,
     "lib": [
       "dom",
       "es2015",
@@ -13,9 +13,10 @@
     "moduleResolution": "node",
     "newLine": "LF",
     "noImplicitAny": false,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "removeComments": false,
     "sourceMap": true,
-    "sourceRoot": "/rainbow-color",
     "strictNullChecks": true,
     "target": "es5"
   }
