--- a/tsconfig.commonjs.json
+++ b/tsconfig.commonjs.json
@@ -1,7 +1,8 @@
 {
   "extends": "./tsconfig.base.json",
   "compilerOptions": {
-    "outDir": "dist/commonjs"
+    "outDir": "dist/commonjs",
+    "sourceRoot": "/color-map-rainbow"
   },
   "files": [
     "src/index.ts"
