Update deps and project

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,4 @@
 {
-  "typescript.tsdk": "node_modules/typescript/lib",
   "json.schemas": [
     {
       "fileMatch": [
@@ -7,5 +6,6 @@
       ],
       "url": "http://json.schemastore.org/tsconfig"
     }
-  ]
+  ],
+  "typescript.tsdk": "node_modules/typescript/lib"
 }
