--- a/tsconfig.es5.json
+++ b/tsconfig.es5.json
@@ -1,12 +1,10 @@
 {
   "extends": "./tsconfig.base.json",
   "compilerOptions": {
-    "outDir": "dist/commonjs"
+    "outDir": "dist/es5",
+    "target": "es5"
   },
   "files": [
     "src/index.ts"
-  ],
-  "include": [
-    "typings/index.d.ts"
   ]
 }
