--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "aurelia-logging": "^1.2.0",
     "aurelia-logging-color": "^0.5.1",
     "ava": "^0.18.2",
+    "colormap": "^2.2.0",
     "core-js": "^2.4.1",
     "dependency-check": "^2.8.0",
     "eslint": "^3.15.0",
