--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,20 @@
 language: node_js
-
+cache:
+  directories:
+    - ~/.npm
 notifications:
-  email:
-    on_success: never
-    on_failure: change
-
+  email: false
 node_js:
-  - "stable"
-
+  - '9'
+  - '8'
+  - '6'
+  - '4'
 branches:
   only:
-    - "master"
+    - 'master'
+    - /^greenkeeper.*$/
+  # except:
+  #   - /^v\d+\.\d+\.\d+$/
 
 before_install:
 - npm install -g greenkeeper-lockfile@1
@@ -24,3 +28,5 @@ after_script: greenkeeper-lockfile-upload
 
 after_success:
   - npm install coveralls && npm run coveralls
+  - npm install -g travis-deploy-once@4
+  - travis-deploy-once "npm run semantic-release"
