--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "color-map-rainbow",
   "description": "Create rainbow of colors",
-  "version": "2.1.1",
+  "version": "0.0.0-development",
   "main": "dist/es5/index.js",
   "module": "dist/es2015/index.js",
   "typings": "dist/es5/index.d.ts",
@@ -18,16 +18,15 @@
     "clean": "rimraf dist/es5 dist/es2015",
     "dc": "npm run dependency-check",
     "dependency-check": "dependency-check . --unused --no-dev && dependency-check . --missing --no-dev",
-    "lint": "tslint -p tsconfig.json --type-check \"src/**/*.ts\"",
-    "postpublish": "git push",
-    "preversion": "git pull && npm run verify",
-    "version": "npm run remove-spec && npm run build-es2015 && npm run bundle && git add -f dist/color-map-rainbow*",
+    "lint": "tslint -p tsconfig.json 'src/**/*.ts'",
+    "prepublishOnly": "npm run build && npm run bundle",
     "verify": "npm run lint && npm run coverage && npm run dependency-check",
     "coverage": "nyc --check-coverage --branches 85 --functions 85 --lines 85 npm test",
     "coveralls": "nyc report --reporter=text-lcov | coveralls",
     "remove-spec": "rimraf dist/es5/**/*.spec.*",
     "test": "npm run clean && tsc && ava",
-    "watch": "npm run clean && node scripts/watch.js"
+    "watch": "npm run clean && node scripts/watch.js",
+    "semantic-release": "semantic-release"
   },
   "author": {
     "name": "Homa Wong",
@@ -39,7 +38,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/unional/color-map-rainbow.git"
+    "url": "https://github.com/unional/color-map-rainbow.git"
   },
   "license": "MIT",
   "ava": {
@@ -79,7 +78,8 @@
     "tslint": "^5.8.0",
     "tslint-config-unional": "^0.8.0",
     "typescript": "^2.6.2",
-    "webpack": "^3.10.0"
+    "webpack": "^3.10.0",
+    "semantic-release": "^11.0.2"
   },
   "dependencies": {
     "color-map": "^0.5.11"
