fix: improve bundling
Update to lastest formats.

The bundles should be used as example only.

The best way to consume the code is to load them in NodeJS and bundle at application level.

Bundling at package level doesn't make much sense.

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -18,5 +18,8 @@
     "removeComments": false,
     "sourceMap": true,
     "strictNullChecks": true
-  }
+  },
+  "files": [
+    "src/index.ts"
+  ]
 }
