--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "color-map-rainbow",
   "description": "Create rainbow of colors",
   "version": "0.0.0-development",
-  "main": "dist/es5/index.js",
-  "module": "dist/es2015/index.js",
-  "typings": "dist/es5/index.d.ts",
+  "main": "dist-es5/index.js",
+  "module": "dist-es2015/index.js",
+  "typings": "dist-es5/index.d.ts",
   "files": [
     "dist"
   ],
@@ -13,9 +13,9 @@
     "build-es2015": "tsc -p tsconfig.es2015.json",
     "build-es5": "tsc -p tsconfig.es5.json",
     "bundle": "npm run bundle-es2015 && npm run bundle-es5",
-    "bundle-es2015": "rollup --config rollup.config.es2015.js",
-    "bundle-es5": "webpack --config webpack.config.es5.js",
-    "clean": "rimraf dist/es5 dist/es2015",
+    "bundle-es2015": "rollup --config rollup.config.js",
+    "bundle-es5": "webpack",
+    "clean": "rimraf dist-es5 dist-es2015",
     "dc": "npm run dependency-check",
     "dependency-check": "dependency-check . --unused --no-dev && dependency-check . --missing --no-dev",
     "lint": "tslint -p tsconfig.json 'src/**/*.ts'",
@@ -23,7 +23,6 @@
     "verify": "npm run lint && npm run coverage && npm run dependency-check",
     "coverage": "nyc --check-coverage --branches 85 --functions 85 --lines 85 npm test",
     "coveralls": "nyc report --reporter=text-lcov | coveralls",
-    "remove-spec": "rimraf dist/es5/**/*.spec.*",
     "test": "npm run clean && tsc && ava",
     "watch": "npm run clean && node scripts/watch.js",
     "semantic-release": "semantic-release"
@@ -43,11 +42,11 @@
   "license": "MIT",
   "ava": {
     "files": [
-      "dist/es5/**/*.spec.js"
+      "dist-es5/**/*.spec.js"
     ],
     "source": [
       "scripts/*.js",
-      "dist/es5/**/*.js",
+      "dist-es5/**/*.js",
       "*.json"
     ]
   },
@@ -74,12 +73,12 @@
     "rollup-plugin-node-globals": "^1.1.0",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-sourcemaps": "^0.4.2",
-    "source-map-loader": "^0.2.3",
+    "semantic-release": "^11.0.2",
+    "ts-loader": "^3.2.0",
     "tslint": "^5.8.0",
     "tslint-config-unional": "^0.8.0",
     "typescript": "^2.6.2",
-    "webpack": "^3.10.0",
-    "semantic-release": "^11.0.2"
+    "webpack": "^3.10.0"
   },
   "dependencies": {
     "color-map": "^0.5.11"
