--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# OSX
+.DS_Store
+
 # Logs
 logs
 *.log
@@ -14,6 +17,7 @@ lib-cov
 # Coverage directory used by tools like istanbul
 coverage
 .nyc_output
+.progress
 
 # Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
@@ -37,9 +41,10 @@ node_modules
 # webstorm
 .idea
 
-# typings
-typings
-
 # project folders
-dist-es5
-dist-es2015
+cjs
+dist
+docs
+esm
+lib
+out
