--- a/package.json
+++ b/package.json
@@ -1,36 +1,7 @@
 {
   "name": "color-map-rainbow",
-  "description": "Create rainbow of colors",
   "version": "0.0.0-development",
-  "main": "dist-es5/index.js",
-  "module": "dist-es2015/index.js",
-  "typings": "dist-es5/index.d.ts",
-  "files": [
-    "dist"
-  ],
-  "scripts": {
-    "build": "npm run clean && npm run build-es5 && npm run build-es2015",
-    "build-es2015": "tsc -p tsconfig.es2015.json",
-    "build-es5": "tsc -p tsconfig.es5.json",
-    "bundle": "npm run bundle-es2015 && npm run bundle-es5",
-    "bundle-es2015": "rollup --config rollup.config.js",
-    "bundle-es5": "webpack",
-    "clean": "rimraf dist-es5 dist-es2015",
-    "dc": "npm run dependency-check",
-    "dependency-check": "dependency-check . --unused --no-dev && dependency-check . --missing --no-dev",
-    "lint": "tslint -p tsconfig.json 'src/**/*.ts'",
-    "prepublishOnly": "npm run build && npm run bundle",
-    "verify": "npm run lint && npm run coverage && npm run dependency-check",
-    "coverage": "nyc --check-coverage --branches 85 --functions 85 --lines 85 npm test",
-    "coveralls": "nyc report --reporter=text-lcov | coveralls",
-    "test": "npm run clean && tsc && ava",
-    "watch": "npm run clean && node scripts/watch.js",
-    "semantic-release": "semantic-release"
-  },
-  "author": {
-    "name": "Homa Wong",
-    "email": "homawong@gmail.com"
-  },
+  "description": "Create rainbow of colors",
   "homepage": "https://github.com/unional/color-map-rainbow",
   "bugs": {
     "url": "https://github.com/unional/color-map-rainbow/issues"
@@ -40,47 +11,78 @@
     "url": "https://github.com/unional/color-map-rainbow.git"
   },
   "license": "MIT",
-  "ava": {
-    "files": [
-      "dist-es5/**/*.spec.js"
-    ],
-    "sources": [
-      "scripts/*.js",
-      "dist-es5/**/*.js",
-      "*.json"
-    ]
+  "author": {
+    "name": "Homa Wong",
+    "email": "homawong@gmail.com"
   },
-  "nyc": {
-    "exclude": [
-      "scripts",
-      "**/*.spec.*",
-      "**/fixtures/**/*"
-    ]
+  "main": "dist-es5/index.js",
+  "module": "dist-es2015/index.js",
+  "typings": "dist-es5/index.d.ts",
+  "files": [
+    "dist"
+  ],
+  "scripts": {
+    "build": "npm-run-all -p build-es5 build-es2015 -s bundle",
+    "build-es2015": "tsc -p tsconfig.es2015.json",
+    "build-es5": "tsc -p tsconfig.es5.json",
+    "bundle": "run-p bundle-es2015 bundle-es5",
+    "bundle-es2015": "rollup --config rollup.config.js",
+    "bundle-es5": "webpack",
+    "clean": "rimraf dist-es5 dist-es2015 coverage",
+    "coverage": "jest --coverage",
+    "depcheck": "depcheck",
+    "lint": "eslint --ext=ts,js .",
+    "nuke": "yarn clean && rimraf node_modules",
+    "prepare": "husky install",
+    "release": "npx semantic-release",
+    "size-limit": "size-limit",
+    "test": "jest",
+    "test:types": "tsc",
+    "verify": "run-p verify:build lint test:types coverage",
+    "verify:build": "npm-run-all clean build -p depcheck size-limit",
+    "watch": "jest --watch"
+  },
+  "dependencies": {
+    "color-map": "^1.1.0"
   },
   "devDependencies": {
-    "ansi-styles": "github:chalk/ansi-styles",
-    "ava": "^3.0.0",
-    "dependency-check": "^3.3.0",
-    "eslint": "^5.11.1",
-    "eslint-plugin-harmony": "^1.0.4",
-    "nyc": "^13.1.0",
+    "@babel/core": "^7.17.9",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-typescript": "^7.16.7",
+    "@commitlint/cli": "^16.2.3",
+    "@commitlint/config-conventional": "^16.2.1",
+    "@size-limit/preset-small-lib": "^7.0.8",
+    "@types/jest": "^27.4.1",
+    "@typescript-eslint/eslint-plugin": "^5.20.0",
+    "ansi-styles": "5",
+    "depcheck": "^1.4.3",
+    "eslint": "^8.14.0",
+    "eslint-plugin-harmony": "^6.0.2",
+    "husky": "^7.0.4",
+    "jest": "^27.5.1",
+    "jest-validate": "^27.5.1",
+    "jest-watch-suspend": "^1.1.2",
+    "jest-watch-toggle-config": "^2.0.1",
+    "jest-watch-typeahead": "^1.0.0",
+    "npm-run-all": "^4.1.5",
     "param-case": "^2.1.1",
     "pascal-case": "^2.0.1",
-    "rimraf": "^3.0.0",
+    "rimraf": "^3.0.2",
     "rollup": "^2.4.0",
     "rollup-plugin-commonjs": "^9.2.0",
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-globals": "^1.4.0",
     "rollup-plugin-node-resolve": "^4.0.0",
     "rollup-plugin-sourcemaps": "^0.4.2",
-    "semantic-release": "^17.0.0",
+    "size-limit": "^7.0.8",
     "ts-loader": "^5.3.2",
-    "tslint": "^5.12.0",
-    "tslint-config-unional": "^0.10.0",
-    "typescript": "^3.2.2",
-    "webpack": "^4.28.3"
+    "typescript": "^4.6.3",
+    "webpack": "^4.28.3",
+    "webpack-cli": "^4.9.2"
   },
-  "dependencies": {
-    "color-map": "^1.1.0"
-  }
+  "size-limit": [
+    {
+      "limit": "2 kb"
+    }
+  ]
 }
