--- a/package.json
+++ b/package.json
@@ -77,6 +77,8 @@
     "size-limit": "^7.0.8",
     "ts-loader": "^5.3.2",
     "typescript": "^4.6.3",
+    "typedoc": "^0.22.15",
+    "typedoc-plugin-extras": "^2.2.3",
     "webpack": "^4.28.3",
     "webpack-cli": "^4.9.2"
   },
