--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,8 @@
     "jsnext",
     "pjson",
     "rgba",
-    "rollup"
+    "rollup",
+    "snyk"
   ],
   "eslint.enable": true,
   "files.watcherExclude": {
